added title to main.tex

--- a/src/main.tex
+++ b/src/main.tex
@@ -2,7 +2,7 @@
 
 \input{utils/packages.tex}
 
-\title{\vspace{160px} \textbf{\huge{}}}
+\title{\vspace{160px} \textbf{\huge{NTC and PTC thermistors}}}
 \author{\Large{Alessandro Trigolo}}
 \date{2023/2024}
 
@@ -19,14 +19,16 @@
 % \listoftodos \newpage
 
 
-ciao sono alessandro \cite{hughes2017study}
 
 
 
 
 
+
+
+
+% Create references section
 \newpage
-\bibliographystyle{plain}
-\bibliography{references}
+\bibliographystyle{plain} \bibliography{references}
 
 \end{document}
