--- a/src/references.bib
+++ b/src/references.bib
@@ -1,1 +1,29 @@
+Scopus
+EXPORT DATE: 17 January 2024
+@ARTICLE{Becker1947170,
+	author = {Becker, J.A. and Green, C.B. and Pearson, G.L.},
+	title = {Properties and Uses of Thermistors—Thermally Sensitive Resistors},
+	year = {1947},
+	journal = {Bell System Technical Journal},
+	volume = {26},
+	number = {1},
+	pages = {170 – 212},
+	doi = {10.1002/j.1538-7305.1947.tb01314.x},
+	url = {https://www.scopus.com/inward/record.uri?eid=2-s2.0-84944482600&doi=10.1002%2fj.1538-7305.1947.tb01314.x&partnerID=40&md5=7a1a8382cad049de1a2448e00bfc62f4},
+	type = {Article},
+	publication_stage = {Final},
+	source = {Scopus},
+	note = {Cited by: 24}
+}
+
+
+
+
+
+
+
+
+
+
+
 
