--- a/src/main.tex
+++ b/src/main.tex
@@ -10,17 +10,15 @@
 
 \begin{document}
 
-\maketitle
-\thispagestyle{empty}
-\newpage
+\maketitle \thispagestyle{empty} \newpage
 
-% \tableofcontents \newpage
+\tableofcontents \newpage
 
-% \listoftodos \newpage
+\listoftodos \newpage
 
+\input{chapters/introduction.tex}
 
-
-
+\input{chapters/PTC-type.tex}
 
 
 
