--- a/src/references.bib
+++ b/src/references.bib
@@ -16,6 +16,23 @@ EXPORT DATE: 17 January 2024
 	note = {Cited by: 24}
 }
 
+Scopus
+EXPORT DATE: 18 January 2024
+
+@ARTICLE{Gupta20163,
+	author = {Gupta, K.M. and Gupta, Nishu},
+	title = {Semiconductor Materials: Their Properties, Applications, and Recent Advances},
+	year = {2016},
+	journal = {Engineering Materials},
+	pages = {3 – 40},
+	doi = {10.1007/978-3-319-19758-6_1},
+	url = {https://www.scopus.com/inward/record.uri?eid=2-s2.0-85126649141&doi=10.1007%2f978-3-319-19758-6_1&partnerID=40&md5=e398c9cd4135aa0d7d5fdffb36f83afa},
+	type = {Book chapter},
+	publication_stage = {Final},
+	source = {Scopus},
+	note = {Cited by: 4}
+}
+
 
 
 
