minor changes on atom-structure.tex

--- a/src/TikZ/atom-structure.tex
+++ b/src/TikZ/atom-structure.tex
@@ -23,13 +23,13 @@
     \draw[fill=red, opacity=0.5] (\angle:2.5) circle (0.15);
   
   % Arrow pointing out one inner electron (longer)
-  \draw[->, thick, black, opacity=0.7] (0:0.8) -- ++(45:2.5) node[right] {Inner Electron};
+  \draw[->, thick, black!70, opacity=0.4] (0:0.8) -- ++(45:2.5) node[right, text opacity=1] {Inner Electron};
   
   % Arrow pointing out one valence electron
-  \draw[->, thick, black, opacity=0.7] (180:2.5) -- ++(135:1) node[left] {Valence Electron};
+  \draw[->, thick, black!70, opacity=0.4] (180:2.5) -- ++(135:1) node[left, text opacity=1] {Valence Electron};
   
   % Arrows describing the outermost orbit
-  \draw[->, thick] (340:2.5) -- ++(340:0.6) node[right] {Valence Shell};
+  \draw[->, thick, black!70, opacity=0.4] (340:2.5) -- ++(340:0.6) node[right, text opacity=1] {Valence Shell};
   
   \end{tikzpicture}
   
