--- a/src/references.bib
+++ b/src/references.bib
@@ -33,11 +33,39 @@ EXPORT DATE: 18 January 2024
 	note = {Cited by: 4}
 }
 
+@book{heck2013magnetic,
+  title={Magnetic materials and their applications},
+  author={Heck, Carl},
+  year={2013},
+  publisher={Elsevier}
+}
 
+@article{whatmore2017ferroelectric,
+  title={Ferroelectric materials},
+  author={Whatmore, Roger},
+  journal={Springer Handbook of Electronic and Photonic Materials},
+  pages={1--1},
+  year={2017},
+  publisher={Springer}
+}
 
-
-
-
+Scopus
+EXPORT DATE: 18 January 2024
+@ARTICLE{Saburi196353,
+	author = {Saburi, O. and Wakino, K.},
+	title = {Processing Techniques and Applications of Positive Temperature Coefficient Thermistors},
+	year = {1963},
+	journal = {IEEE Transactions on Component Parts},
+	volume = {10},
+	number = {2},
+	pages = {53 – 67},
+	doi = {10.1109/TCP.1963.1134809},
+	url = {https://www.scopus.com/inward/record.uri?eid=2-s2.0-84937351303&doi=10.1109%2fTCP.1963.1134809&partnerID=40&md5=476ac8be67658aba034fbb643dc2b97b},
+	type = {Article},
+	publication_stage = {Final},
+	source = {Scopus},
+	note = {Cited by: 63}
+}
 
 
 
