added chapters in main.tex

--- a/src/main.tex
+++ b/src/main.tex
@@ -14,18 +14,15 @@
 
 \tableofcontents \newpage
 
-\listoftodos \newpage
-
 \input{chapters/introduction.tex}
 
 \input{chapters/background.tex}
 
 \input{chapters/PTC-type.tex}
 
+\input{chapters/NTC-type.tex}
 
-
-
-
+\input{chapters/conclusions.tex}
 
 % Create references section
 \newpage
