--- a/src/utils/packages.tex
+++ b/src/utils/packages.tex
@@ -12,7 +12,7 @@
 % \usepackage{color} % colors
 % \usepackage{xcolor} % colors
 % \usepackage{listings} % code listings
-% \usepackage{amsmath} % equations
+\usepackage{amsmath} % equations
 % \usepackage{colortbl} % coloring the table cell
 % \usepackage{multirow}
 % \usepackage{enumitem} % for roman enumeration
