--- a/src/utils/packages.tex
+++ b/src/utils/packages.tex
@@ -24,7 +24,7 @@
 % \usepackage{longtable} % table in more than 1 page
 % \usepackage[autostyle]{csquotes}
 % \usepackage{wrapfig} % wrapping figure
-% \usepackage{placeins} % text after image: \FloatBarrier 
+\usepackage{placeins} % text after image: \FloatBarrier 
 % \usepackage{caption} % removes the "Figure 1" from the cption
 
 
