--- a/src/utils/packages.tex
+++ b/src/utils/packages.tex
@@ -7,6 +7,7 @@
 \usepackage{comment}
 \usepackage{blindtext}
 \usepackage{natbib}
+\usepackage{circuitikz}
 % \usepackage{tikz} \usetikzlibrary{positioning, shadows.blur, shapes.misc}
 % \usepackage{pgfplots} \pgfplotsset{compat=1.18}
 % \usepackage{color} % colors
