--- a/src/references.bib
+++ b/src/references.bib
@@ -67,7 +67,12 @@ EXPORT DATE: 18 January 2024
 	note = {Cited by: 63}
 }
 
-
+@book{jones2010biomedical,
+	title={Biomedical sensors},
+	author={Jones, Deric P},
+	year={2010},
+	publisher={Momentum press}
+}
 
 
 
