finished PTC-type.tex

--- a/src/references.bib
+++ b/src/references.bib
@@ -74,6 +74,75 @@ EXPORT DATE: 18 January 2024
 	publisher={Momentum press}
 }
 
+Scopus
+EXPORT DATE: 22 January 2024
 
+@ARTICLE{Dostert1982159,
+	author = {Dostert, Klaus},
+	title = {Applications of self-heated PTC-thermistors to flow and quantity of heat measurements},
+	year = {1982},
+	journal = {Sensors and Actuators},
+	volume = {3},
+	number = {C},
+	pages = {159 – 167},
+	doi = {10.1016/0250-6874(82)80017-6},
+	url = {https://www.scopus.com/inward/record.uri?eid=2-s2.0-0020718472&doi=10.1016%2f0250-6874%2882%2980017-6&partnerID=40&md5=755b6f0889286199f60546d072a18bcf},
+	type = {Article},
+	publication_stage = {Final},
+	source = {Scopus},
+	note = {Cited by: 9}
+}
 
+Scopus
+EXPORT DATE: 22 January 2024
 
+@ARTICLE{Perkins1982225,
+	author = {Perkins, R.S. and RÜegg, A. and Fischer, M. and Streit, P. and Menth, A.},
+	title = {A New PTC Resistor for Power Applications},
+	year = {1982},
+	journal = {IEEE Transactions on Components, Hybrids, and Manufacturing Technology},
+	volume = {5},
+	number = {2},
+	pages = {225 – 230},
+	doi = {10.1109/TCHMT.1982.1135962},
+	url = {https://www.scopus.com/inward/record.uri?eid=2-s2.0-0020139885&doi=10.1109%2fTCHMT.1982.1135962&partnerID=40&md5=26c5998dde15b3e117c41b6f1959d798},
+	type = {Article},
+	publication_stage = {Final},
+	source = {Scopus},
+	note = {Cited by: 16}
+}
+
+Scopus
+EXPORT DATE: 22 January 2024
+
+@ARTICLE{Tang2023,
+	author = {Tang, Qize and Fan, Shichang and Yang, Yang and Hu, Wei and Qian, Cheng and Ji, Xin and Zhang, Zhen and Liang, Ying and Fang, Bin},
+	title = {Effect of gradient distribution of fillers on polymeric PTC thermistors prepared by solution mixing and subsiding method},
+	year = {2023},
+	journal = {Composites Communications},
+	volume = {42},
+	doi = {10.1016/j.coco.2023.101661},
+	url = {https://www.scopus.com/inward/record.uri?eid=2-s2.0-85164711060&doi=10.1016%2fj.coco.2023.101661&partnerID=40&md5=f051aaa9c4afe8071ccadde1232dbb61},
+	type = {Article},
+	publication_stage = {Final},
+	source = {Scopus},
+	note = {Cited by: 0}
+}
+
+Scopus
+EXPORT DATE: 22 January 2024
+
+@ARTICLE{Cheng2014441,
+	author = {Cheng, Wen-Long and Song, Jia-Liang and Liu, Yi and Yuan, Shuai and Wu, Wan-Fan and Xu, Zhi-Ming},
+	title = {Theoretical and experimental studies on thermal control by using a novel PTC material with room temperature Curie point},
+	year = {2014},
+	journal = {International Journal of Heat and Mass Transfer},
+	volume = {74},
+	pages = {441 – 447},
+	doi = {10.1016/j.ijheatmasstransfer.2014.03.045},
+	url = {https://www.scopus.com/inward/record.uri?eid=2-s2.0-84898655357&doi=10.1016%2fj.ijheatmasstransfer.2014.03.045&partnerID=40&md5=64b1ddb75cbc31d5da6ac61958a75eaf},
+	type = {Article},
+	publication_stage = {Final},
+	source = {Scopus},
+	note = {Cited by: 15}
+}
