--- a/src/main.tex
+++ b/src/main.tex
@@ -2,7 +2,7 @@
 
 \input{utils/packages.tex}
 
-\title{\vspace{160px} \textbf{\huge{NTC and PTC thermistors}}}
+\title{\vspace{170px} \textbf{\huge{NTC and PTC thermistors}}}
 \author{\Large{Alessandro Trigolo}}
 \date{2023/2024}
 
@@ -10,9 +10,13 @@
 
 \begin{document}
 
+% Create the title page
 \maketitle \thispagestyle{empty} \newpage
 
-\tableofcontents \newpage
+% Create the index
+\tableofcontents \listoftodos \newpage
+
+% Starts the document
 
 \input{chapters/introduction.tex}
 
@@ -23,6 +27,7 @@
 \input{chapters/NTC-type.tex}
 
 \input{chapters/conclusions.tex}
+
 
 % Create references section
 \newpage
