started NTC-type.tex

--- a/src/references.bib
+++ b/src/references.bib
@@ -146,3 +146,40 @@ EXPORT DATE: 22 January 2024
 	source = {Scopus},
 	note = {Cited by: 15}
 }
+
+Scopus
+EXPORT DATE: 22 January 2024
+
+@ARTICLE{Ishikawa1989116,
+	author = {Ishikawa, Kazuo and Hata, Takuoki and Shiraishi, Keiji and Miyama, Masahiko and Hayashi, Teruo},
+	title = {High-reliability thermistors for space applications},
+	year = {1989},
+	journal = {National technical report},
+	volume = {35},
+	number = {4},
+	pages = {116 – 128},
+	url = {https://www.scopus.com/inward/record.uri?eid=2-s2.0-0024714373&partnerID=40&md5=126c9849bb927dd55546621f3a7eb266},
+	type = {Article},
+	publication_stage = {Final},
+	source = {Scopus},
+	note = {Cited by: 1}
+}
+
+Scopus
+EXPORT DATE: 22 January 2024
+
+@ARTICLE{Chen20091103,
+	author = {Chen, Chiachung},
+	title = {Evaluation of resistance-temperature calibration equations for NTC thermistors},
+	year = {2009},
+	journal = {Measurement: Journal of the International Measurement Confederation},
+	volume = {42},
+	number = {7},
+	pages = {1103 – 1111},
+	doi = {10.1016/j.measurement.2009.04.004},
+	url = {https://www.scopus.com/inward/record.uri?eid=2-s2.0-67349268137&doi=10.1016%2fj.measurement.2009.04.004&partnerID=40&md5=c71c3dc1659773fbad4a5a45774a8ad5},
+	type = {Article},
+	publication_stage = {Final},
+	source = {Scopus},
+	note = {Cited by: 63}
+}
