finished NTC-type.tex

--- a/src/references.bib
+++ b/src/references.bib
@@ -183,3 +183,96 @@ EXPORT DATE: 22 January 2024
 	source = {Scopus},
 	note = {Cited by: 63}
 }
+
+Scopus
+EXPORT DATE: 22 January 2024
+
+@ARTICLE{Jagtap201182,
+	author = {Jagtap, Shweta and Rane, Sunit and Gosavi, Suresh and Amalnerkar, Dinesh},
+	title = {Study on I-V characteristics of lead free NTC thick film thermistor for self heating application},
+	year = {2011},
+	journal = {Microelectronic Engineering},
+	volume = {88},
+	number = {1},
+	pages = {82 – 86},
+	doi = {10.1016/j.mee.2010.08.025},
+	url = {https://www.scopus.com/inward/record.uri?eid=2-s2.0-78049277882&doi=10.1016%2fj.mee.2010.08.025&partnerID=40&md5=4a8e70ae4be3cae3ea45f59e2daa8947},
+	type = {Article},
+	publication_stage = {Final},
+	source = {Scopus},
+	note = {Cited by: 19}
+}
+
+Scopus
+EXPORT DATE: 22 January 2024
+
+@ARTICLE{Keskin2005244,
+	author = {Keskin, Ali Ümit},
+	title = {A simple analog behavioural model for NTC thermistors including selfheating effect},
+	year = {2005},
+	journal = {Sensors and Actuators, A: Physical},
+	volume = {118},
+	number = {2},
+	pages = {244 – 247},
+	doi = {10.1016/j.sna.2004.06.034},
+	url = {https://www.scopus.com/inward/record.uri?eid=2-s2.0-13244278207&doi=10.1016%2fj.sna.2004.06.034&partnerID=40&md5=e28b6a142dc2cf0ae2f84276b4619faf},
+	type = {Article},
+	publication_stage = {Final},
+	source = {Scopus},
+	note = {Cited by: 27}
+}
+
+Scopus
+EXPORT DATE: 22 January 2024
+
+@ARTICLE{Altenburg20011787,
+	author = {Altenburg, H. and Mrooz, O. and Plewa, J. and Shpotyuk, O. and Vakiv, M.},
+	title = {Semiconductor ceramics for NTC thermistors: The reliability aspects},
+	year = {2001},
+	journal = {Journal of the European Ceramic Society},
+	volume = {21},
+	number = {10-11},
+	pages = {1787 – 1791},
+	doi = {10.1016/S0955-2219(01)00116-9},
+	url = {https://www.scopus.com/inward/record.uri?eid=2-s2.0-0034892124&doi=10.1016%2fS0955-2219%2801%2900116-9&partnerID=40&md5=0e01b55c5f80772d5f4bf7d2037e339c},
+	type = {Article},
+	publication_stage = {Final},
+	source = {Scopus},
+	note = {Cited by: 23}
+}
+
+Scopus
+EXPORT DATE: 22 January 2024
+
+@ARTICLE{Feteira2009967,
+	author = {Feteira, Antonio},
+	title = {Negative temperature coefficient resistance (NTCR) ceramic thermistors: An industrial perspective},
+	year = {2009},
+	journal = {Journal of the American Ceramic Society},
+	volume = {92},
+	number = {5},
+	pages = {967 – 983},
+	doi = {10.1111/j.1551-2916.2009.02990.x},
+	url = {https://www.scopus.com/inward/record.uri?eid=2-s2.0-65449164948&doi=10.1111%2fj.1551-2916.2009.02990.x&partnerID=40&md5=5b59e1a0b0be6b5ff8d11098fcfd3815},
+	type = {Review},
+	publication_stage = {Final},
+	source = {Scopus},
+	note = {Cited by: 495}
+}
+
+Scopus
+EXPORT DATE: 22 January 2024
+
+@ARTICLE{Li2023,
+	author = {Li, Jiahao and Sun, Jianping and Li, Ting and Wang, Hongjun and Wang, Guangyao and Pan, Jiang and Chen, Zechuan and Gao, Chuanji},
+	title = {Investigation of calibration equations for NTC thermistors utilized in the deep-ocean temperature range},
+	year = {2023},
+	journal = {Measurement: Journal of the International Measurement Confederation},
+	volume = {207},
+	doi = {10.1016/j.measurement.2022.112394},
+	url = {https://www.scopus.com/inward/record.uri?eid=2-s2.0-85145265764&doi=10.1016%2fj.measurement.2022.112394&partnerID=40&md5=7940a942c2a2f858f1ec7861c2772961},
+	type = {Article},
+	publication_stage = {Final},
+	source = {Scopus},
+	note = {Cited by: 1}
+}
