removed list of todos

--- a/src/main.tex
+++ b/src/main.tex
@@ -14,7 +14,7 @@
 \maketitle \thispagestyle{empty} \newpage
 
 % Create the index
-\tableofcontents \listoftodos \newpage
+\tableofcontents \newpage
 
 % Starts the document
 
