added gh profile link

--- a/src/main.tex
+++ b/src/main.tex
@@ -3,7 +3,7 @@
 \input{utils/packages.tex}
 
 \title{\vspace{170px} \textbf{\huge{NTC and PTC thermistors}}}
-\author{\Large{Alessandro Trigolo}}
+\author{\Large{\href{https://github.com/imAlessas}{Alessandro Trigolo}}}
 \date{2023/2024}
 
 
